# apps/repo-article/docs/swagger.json
@@ -193,6 +193,70 @@
                 }
             }
         },
+        "/articles/history": {
+            "get": {
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
+                "description": "Get a list of articles with optional filtering and pagination",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Articles"
+                ],
+                "summary": "Get user's history on all articles",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "default": 10,
+                        "description": "Limit number of results",
+                        "name": "limit",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "default": 0,
+                        "description": "Offset for pagination",
+                        "name": "offset",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "default": "Bearer \u003cAdd access token here\u003e",
+                        "description": "Insert your access token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/repo_article_src_api_dto.ArticleResponse"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/repo_article_src_api_dto.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/repo_article_src_api_dto.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/articles/ingestion": {
             "post": {
                 "security": [
@@ -1001,6 +1065,12 @@
                     "type": "string"
                 },
                 "id": {
+                    "type": "integer"
+                },
+                "last_interaction": {
+                    "type": "string"
+                },
+                "liked_value": {
                     "type": "integer"
                 },
                 "link": {
